--- a/old_css/style_about.css
+++ b/old_css/style_about.css
@@ -1,4 +1,4 @@
-.about {
+/* .about {
     background: linear-gradient(#000000, #000000);
     padding-bottom: 80px;
     padding-left: 237px;
@@ -102,4 +102,4 @@
     .about__col:nth-child(2) {
         margin-right: 20px;
     }
-} 
+}  */
