--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,9 +1,9 @@
-//@import './fonts';
-//@import './about';
-//@import './base';
-//@import './btn';
-//@import './header';
-//@import './hero';
-//@import './box_head';
+@import './fonts';
+@import './about';
+@import './base';
+@import './btn';
+@import './header';
+@import './hero';
+@import './box_head';
 @import '../styles/media';
 
