--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -6,47 +6,53 @@
 
 @media (max-width:1310px){
 
-    .header__social-img {
-        margin-right: 20px;
-    }
+    .header__line {
 
-    .header__line:nth-child(1){
-        top:0;
-    }
+        &:nth-child(1) {
+            top:0;
+        }
 
-    .header__line:nth-child(2){
-        top:9px;
-    }
+        &:nth-child(2) {
+            top:9px;
+        }
 
-    .header__line:nth-child(3){
-        top:18px;
-    }
+        &:nth-child(3) {
+            top:18px;
+        }
 
-    .header__btn-menu--open .header__line:nth-child(1){
-        transform: rotate(45deg);
-        top: 9px;
-    }
-
-    .header__btn-menu--open .header__line:nth-child(3){
-        transform: rotate(-45deg);
-        top: 9px;
-    }
-
-    .header__btn-menu--open .header__line:nth-child(2){
-        display: none;
     }
 
     .header__social {
         margin-right: 30px;
+        flex-shrink:0;
+
+        &-img {
+            margin-right: 20px;
+        }
+
+    }
+
+    .header__btn-menu {
+        flex-shrink:0;
+
+        &--open .header__line:nth-child(2) {
+            display: none;
+        }
+
+        &--open .header__line:nth-child(3) {
+            transform: rotate(-45deg);
+            top: 9px;
+        }
+
+        &--open .header__line:nth-child(1) {
+            transform: rotate(45deg);
+            top: 9px;
+        }
     }
 
     .hero__wrap { 
         margin-left: 0px;
         margin-right: 3px;
-    }
-
-    .header__social, .header__btn-menu {
-        flex-shrink:0;
     }
 
 }
@@ -56,167 +62,182 @@
     .about  {
         padding-left: 50px;
         padding-right: 50px;
-    }
-    .about__row {
 
-        flex-direction: column;
-    }
-    .about__col:last-child {
-        width: 100%;
-    }
-    .about__col:first-child {
-        margin-right: 20px;
-    }
-    .about__col:nth-child(2) {
-        margin-right: 20px;
+        &__row {
+            flex-direction: column;
+        }
+
+        &__col {
+
+            &:last-child {
+                width: 100%;
+            }
+
+            &:first-child {
+                margin-right: 20px;
+            }
+
+            &:nth-child(2) {
+                margin-right: 20px;
+            }
+        }
     }
 } 
 
 @media (max-width:1023px) {
-     .header__social{
-         margin-left: auto;
-     }
 
-    .header__nav {
-        display: none;
-    }
+    .header {
 
-    .header__nav--open {
-        display: block;
-        position: absolute;
-        right: -55px;
-        top: 100px;
-        background-color: black;
-        border-radius: 10px;
-    }
+        &__social {
+            margin-left: auto;
+        }
 
-    .header__item {
-        display: block;
-        padding-left: 15px;
-    }
+        &__nav {
+            display: none;
 
-    .header__list {
-        flex-direction: column;
-    }
+            &--open {
+                display: block;
+                position: absolute;
+                right: -55px;
+                top: 100px;
+                background-color: black;
+                border-radius: 10px;
+            }
+        }
 
-    .header__btn-menu {
-        display: block;
-        width: 30px;
-        height: 20px;
-        position: relative;
-    }
+        &__item {
+            display: block;
+            padding-left: 15px;
+        }
 
-    .header__line {
-        width:100%;
-        height: 2.5px;
-        background-color: #fff;
-        position: absolute;
-        border-radius: 5px;
-        left: 0;
+        &__list {
+            flex-direction: column;
+        }
+
+        &__btn-menu {
+            display: block;
+            width: 30px;
+            height: 20px;
+            position: relative;
+        }
+
+        &__line {
+            width:100%;
+            height: 2.5px;
+            background-color: #fff;
+            position: absolute;
+            border-radius: 5px;
+            left: 0;
+        }
+
     }
 }
 
 @media (max-width:768px) {
 
-    .hero__content {
-        justify-content: center;
-        align-items: center;
+    .hero {
+        &__content {
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        &__desc {
+            line-height: 22px;
+            max-width: 345px;
+            text-align: center;
+        }
+
+       &__box {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+       }
     }
 
-   .hero__content {
-        text-align: center;
-        margin-bottom: 20px;
-   }
-
-   .hero__desc {
-        line-height: 22px;
-        max-width: 345px;
-        text-align: center;
-   }
-
-   .hero__box {
-       display: flex;
-       align-items: center;
-       flex-direction: column;
-   }
-
-   .box-head {
-       padding-top: 50px;
-   }
-
-   .box-head__title {
-       font-size: 28px;
-   }
+    .box-head {
+        padding-top: 50px;
+ 
+        &__title {
+             font-size: 28px;
+        }   
+   
+     }
 
 }
 
 @media (max-width:410px) {
 
-    .header__social {
-    margin-left: 0px;
-    }
-    .header__logo-img{
-        max-width: 111px;
-        max-height: 56px;
+    .header {
+
+        &__social {
+            margin-left: 0px;
+
+            &-img {
+                margin-right: 15px;
+            }
+
+            &-svg {
+                margin-left: 0px;
+                margin-right: 15px;
+
+                &:last-child {
+                    margin-right: 0px;
+                }
+            }
+        }
+
+        &__logo {
+            margin-right: 59px;
+
+            &-img {
+                max-width: 111px;
+                max-height: 56px;
+            }
+        }
+
     }
 
-    .header__social{
-        margin-left: 0px;
+    .hero {
+
+        &__caption {
+            font-size: 32px;
+            line-height: 40px;
+            font-weight: 900;
+        }
+
+        &__desc {
+            line-height: 22px;
+            max-width: 355px;
+        }
+
     }
 
-    .header__social-img {
-        margin-right: 15px;
-    }
-
-    .header__logo{
-        margin-right: 59px;
-    }
-
-    .header__social-svg {
-        margin-left: 0px;
-        margin-right: 30px;
-    }
-
-    .header__social-svg {
-        margin-right: 15px;
-    }
-
-    .header__social-svg:last-child {
-        margin-right: 0px;
-    }
-
-    .hero__caption {
-        font-size: 32px;
-        line-height: 40px;
-        font-weight: 900;
-    }
-
-    .hero__desc {
-        line-height: 22px;
-        max-width: 355px;
-    }
-
-    .box-head__title {
-        font-size: 28px;
-        line-height: 32px;
-        padding-bottom: 30px;
-    }
 
     .about {
         padding-left: 10px;
         padding-right: 10px;
+
+        &__col {
+            padding-bottom: 30px;
+            margin-right: 0px;
+
+            &:first-child, &:nth-child(2) {
+                margin-right: 0px;
+            }
+        }
+
+        &__btn-delivery {
+            display: none;
+        }
     }
 
-    .about__col, .about__col:first-child, .about__col:nth-child(2) {
-        margin-right: 0px;
-    }
-
-    .about__col {
+    
+    .box-head__title {
+        font-size: 28px;
+        line-height: 32px;
         padding-bottom: 30px;
-    }
-
-    .about__btn-delivery {
-        display: none;
     }
 
 }
