--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,15 +122,12 @@ svg {
   font-size: 14px;
   line-height: 19px;
 }
-
 .btn--lg {
   padding: 19px 48px;
 }
-
 .btn--sm {
   padding: 19px 35px;
 }
-
 .btn:hover {
   background-color: rgba(0, 0, 0, 0.6);
   border-color: #B82121;
@@ -271,47 +268,42 @@ svg {
   }
 }
 @media (max-width: 1310px) {
-  .header__social-img {
-    margin-right: 20px;
-  }
-
   .header__line:nth-child(1) {
     top: 0;
   }
-
   .header__line:nth-child(2) {
     top: 9px;
   }
-
   .header__line:nth-child(3) {
     top: 18px;
   }
 
+  .header__social {
+    margin-right: 30px;
+    flex-shrink: 0;
+  }
+  .header__social-img {
+    margin-right: 20px;
+  }
+
+  .header__btn-menu {
+    flex-shrink: 0;
+  }
+  .header__btn-menu--open .header__line:nth-child(2) {
+    display: none;
+  }
+  .header__btn-menu--open .header__line:nth-child(3) {
+    transform: rotate(-45deg);
+    top: 9px;
+  }
   .header__btn-menu--open .header__line:nth-child(1) {
     transform: rotate(45deg);
     top: 9px;
   }
 
-  .header__btn-menu--open .header__line:nth-child(3) {
-    transform: rotate(-45deg);
-    top: 9px;
-  }
-
-  .header__btn-menu--open .header__line:nth-child(2) {
-    display: none;
-  }
-
-  .header__social {
-    margin-right: 30px;
-  }
-
   .hero__wrap {
     margin-left: 0px;
     margin-right: 3px;
-  }
-
-  .header__social, .header__btn-menu {
-    flex-shrink: 0;
   }
 }
 @media (max-width: 1250px) {
@@ -319,19 +311,15 @@ svg {
     padding-left: 50px;
     padding-right: 50px;
   }
-
   .about__row {
     flex-direction: column;
   }
-
   .about__col:last-child {
     width: 100%;
   }
-
   .about__col:first-child {
     margin-right: 20px;
   }
-
   .about__col:nth-child(2) {
     margin-right: 20px;
   }
@@ -340,11 +328,9 @@ svg {
   .header__social {
     margin-left: auto;
   }
-
   .header__nav {
     display: none;
   }
-
   .header__nav--open {
     display: block;
     position: absolute;
@@ -353,23 +339,19 @@ svg {
     background-color: black;
     border-radius: 10px;
   }
-
   .header__item {
     display: block;
     padding-left: 15px;
   }
-
   .header__list {
     flex-direction: column;
   }
-
   .header__btn-menu {
     display: block;
     width: 30px;
     height: 20px;
     position: relative;
   }
-
   .header__line {
     width: 100%;
     height: 2.5px;
@@ -383,19 +365,14 @@ svg {
   .hero__content {
     justify-content: center;
     align-items: center;
-  }
-
-  .hero__content {
     text-align: center;
     margin-bottom: 20px;
   }
-
   .hero__desc {
     line-height: 22px;
     max-width: 345px;
     text-align: center;
   }
-
   .hero__box {
     display: flex;
     align-items: center;
@@ -405,7 +382,6 @@ svg {
   .box-head {
     padding-top: 50px;
   }
-
   .box-head__title {
     font-size: 28px;
   }
@@ -414,35 +390,22 @@ svg {
   .header__social {
     margin-left: 0px;
   }
-
-  .header__logo-img {
-    max-width: 111px;
-    max-height: 56px;
-  }
-
-  .header__social {
-    margin-left: 0px;
-  }
-
   .header__social-img {
     margin-right: 15px;
   }
-
+  .header__social-svg {
+    margin-left: 0px;
+    margin-right: 15px;
+  }
+  .header__social-svg:last-child {
+    margin-right: 0px;
+  }
   .header__logo {
     margin-right: 59px;
   }
-
-  .header__social-svg {
-    margin-left: 0px;
-    margin-right: 30px;
-  }
-
-  .header__social-svg {
-    margin-right: 15px;
-  }
-
-  .header__social-svg:last-child {
-    margin-right: 0px;
+  .header__logo-img {
+    max-width: 111px;
+    max-height: 56px;
   }
 
   .hero__caption {
@@ -450,37 +413,30 @@ svg {
     line-height: 40px;
     font-weight: 900;
   }
-
   .hero__desc {
     line-height: 22px;
     max-width: 355px;
-  }
-
-  .box-head__title {
-    font-size: 28px;
-    line-height: 32px;
-    padding-bottom: 30px;
   }
 
   .about {
     padding-left: 10px;
     padding-right: 10px;
   }
-
-  .about__col, .about__col:first-child, .about__col:nth-child(2) {
-    margin-right: 0px;
-  }
-
   .about__col {
     padding-bottom: 30px;
+    margin-right: 0px;
   }
-
+  .about__col:first-child, .about__col:nth-child(2) {
+    margin-right: 0px;
+  }
   .about__btn-delivery {
     display: none;
   }
 
-  .about__row {
-    margin-bottom: 0px;
+  .box-head__title {
+    font-size: 28px;
+    line-height: 32px;
+    padding-bottom: 30px;
   }
 }
 
