--- a/old_css/about.css
+++ b/old_css/about.css
@@ -21,10 +21,12 @@
 
 .images {
     background-color: black;
+    padding-bottom: 40px;
 }
 /****************************************************************************************************************************/
 .delivery {
     background-color: black;
+    padding-bottom: 160px;
 }
 
 .delivery > .container {
@@ -82,6 +84,34 @@
     max-width: 405px;
     max-height: 50px;
     line-height: 25px;
+}
+
+/************************************************************************************/
+.footer {
+    background-color: black;
+}
+
+
+.footer__main-row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    line-height:0;
+    justify-content: space-between; 
+}
+
+.footer__main-col {
+    width: 25%;
+}
+
+.footer__logo-img {
+    object-fit: cover;
+    max-width: 133px;
+    max-height: 66px;
+}
+.footer__wrap {
+    margin-left: 66px;
+    margin-right: 100px;
 }
 
 @media (max-width:376px) {
