--- a/old_css/about.css
+++ b/old_css/about.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+        url('../fonts/Montserrat-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../fonts/Montserrat-Regular.woff2') format('woff2'),
+        url('../fonts/Montserrat-Regular.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+
 .images_row {
     display: flex;
     justify-content: center;
@@ -125,6 +145,7 @@
 }
 
 .footer__text-tel {
+    font-family: 'Noto', Arial, Helvetica, sans-serif;
     line-height: 23px;
     font-weight: 700;
     font-size: 19px;
