--- a/old_css/about.css
+++ b/old_css/about.css
@@ -74,7 +74,6 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-
     align-items: center;
 }
 
@@ -104,7 +103,7 @@
 }
 
 /************************************************************************************/
-.footer, .delivery, .images {
+.footer, .delivery, .images, .menu {
     background-color: black;
 }
 
@@ -204,7 +203,48 @@
     line-height: 15px;
     font-size: 12px;
 }
+/********************************************************************************************/
+.menu__row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    letter-spacing: -0.36em;
+}
 
+.menu__col {
+    width: 16.3%;
+    margin-right: 5px;
+    letter-spacing: normal;
+}
+
+.menu__col:last-child {
+    margin-right: 0px;
+}
+
+.menu__wrap {
+    min-height: 508px;
+    position: relative;
+}
+
+.menu__img--item {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+.menu__img-wrap {
+    position: relative;
+    padding-bottom: 176%;
+    overflow: hidden;
+}
+
+.menu > .container {
+    padding: 0;
+}
 @media (max-width:376px) {
     .images_col {
         width: 100%;
