--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -3,6 +3,8 @@
     // padding-bottom: 80px;
     padding-left: 237px;
     padding-right: 236px;
+    padding-top: 121px;
+    padding-bottom: 137px;
     
     &__row {
         flex-wrap: wrap;
