--- a/styles/styles.css
+++ b/styles/styles.css
@@ -206,12 +206,15 @@ svg {
   max-width: 632px;
   margin: 0 auto;
   line-height: 22px;
+  padding-bottom: 60px;
 }
 
 .about {
   background: linear-gradient(#000000, #000000);
   padding-left: 237px;
   padding-right: 236px;
+  padding-top: 121px;
+  padding-bottom: 137px;
 }
 .about__row {
   flex-wrap: wrap;
