--- a/old_css/about.css
+++ b/old_css/about.css
@@ -223,7 +223,6 @@
 }
 
 .menu__wrap {
-    min-height: 508px;
     position: relative;
 }
 
@@ -238,13 +237,27 @@
 
 .menu__img-wrap {
     position: relative;
-    padding-bottom: 176%;
+    padding-bottom: 204%;
     overflow: hidden;
+    background: rgba(0, 0, 0, 0.7);
+    opacity: 0.7;
 }
 
 .menu > .container {
     padding: 0;
 }
+
+.menu__img-text {
+    position: absolute;
+    font-weight: 800;
+    font-size: 24px;
+    line-height: 70px;
+}
+
+.bg-fon {
+    
+}
+
 @media (max-width:376px) {
     .images_col {
         width: 100%;
