--- a/old_css/about.css
+++ b/old_css/about.css
@@ -239,7 +239,6 @@
     position: relative;
     padding-bottom: 204%;
     overflow: hidden;
-    background: rgba(0, 0, 0, 0.7);
     opacity: 0.7;
 }
 
@@ -249,13 +248,14 @@
 
 .menu__img-text {
     position: absolute;
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 70px;
+    top: 100%;
+    left: 0;
+    text-align: center;
+    margin: 0 auto;
 }
 
-.bg-fon {
-    
+.menu__card{
+    position: relative;
 }
 
 @media (max-width:376px) {
