--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -43,12 +43,13 @@
                 justify-content: space-between;
                 align-items: center;
             }
+            
 
             &:last-child{
                 margin-right: 0px;
             }
 
-            &-link{
+            &-link {
                 & svg {
                     transition: all .03s;
                     transform-origin: 50% 50%;
@@ -56,8 +57,8 @@
                     max-width: 20px;
                 }
 
-                &:hover {
-                    transform: scale(1.2);
+                &:hover{
+                    transform: none;
                 }
             }
 
