--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ body {
   color: #FFFFFF;
   font-weight: 400;
   font-family: "Noto", Arial, Helvetica, sans-serif;
-  min-width: 320px;
+  min-width: 375px;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, ol {
@@ -209,13 +209,70 @@ svg {
   padding-bottom: 60px;
 }
 
+.about {
+  background: linear-gradient(#000000, #000000);
+  padding-left: 237px;
+  padding-right: 236px;
+  padding-top: 121px;
+  padding-bottom: 137px;
+}
+.about__row {
+  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about__col {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 33.33%;
+}
+.about__card {
+  max-width: 287px;
+  margin: 0 auto;
+}
+.about__img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.about__img-box {
+  display: block;
+  position: relative;
+  padding-bottom: 100%;
+  overflow: hidden;
+}
+.about__body-text {
+  margin: 0 auto;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 25px;
+  max-width: 262px;
+}
+.about__body-box {
+  padding-top: 40px;
+  text-align: center;
+}
+.about__row {
+  margin-bottom: 60px;
+}
+.about__btn-delivery {
+  text-align: center;
+}
+
 @media (max-width: 1474px) {
   .header__social-tel-number {
     display: none;
   }
-
-  .about__col:nth-child(3) {
-    margin-top: 30px;
+}
+@media (max-width: 1400px) {
+  .about {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 @media (max-width: 1310px) {
@@ -257,28 +314,6 @@ svg {
     margin-right: 3px;
   }
 }
-@media (max-width: 1250px) {
-  .about {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .about__row {
-    flex-direction: column;
-  }
-  .about__col:nth-child(3) {
-    width: 50%;
-    margin-right: 0px;
-  }
-  .about__col:first-child {
-    width: 50%;
-    margin-bottom: 30px;
-    margin-right: 0px;
-  }
-  .about__col:nth-child(2) {
-    width: 50%;
-    margin-right: 0px;
-  }
-}
 @media (max-width: 1023px) {
   .header__social {
     margin-left: auto;
@@ -315,6 +350,13 @@ svg {
     border-radius: 5px;
     left: 0;
   }
+
+  .about__col {
+    width: 50%;
+  }
+  .about__col:last-child {
+    margin-top: 40px;
+  }
 }
 @media (max-width: 768px) {
   .hero__content {
@@ -333,12 +375,35 @@ svg {
     align-items: center;
     flex-direction: column;
   }
+  .hero__caption {
+    font-size: 30px;
+  }
 
   .box-head {
     padding-top: 50px;
   }
   .box-head__title {
     font-size: 28px;
+    margin-bottom: 0px;
+  }
+
+  .about {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .about__row {
+    margin-bottom: 0px;
+  }
+  .about__col {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .about__col:last-child {
+    margin-top: 0px;
+  }
+
+  .box-head {
+    padding-top: 10px;
   }
 }
 @media (max-width: 410px) {
@@ -373,17 +438,6 @@ svg {
     max-width: 355px;
   }
 
-  .about {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  .about__col {
-    padding-bottom: 30px;
-    margin-right: 0px;
-  }
-  .about__col:first-child, .about__col:nth-child(2) {
-    margin-right: 0px;
-  }
   .about__btn-delivery {
     display: none;
   }
@@ -393,58 +447,6 @@ svg {
     line-height: 32px;
     padding-bottom: 30px;
   }
-}
-.about {
-  background: linear-gradient(#000000, #000000);
-  padding-left: 237px;
-  padding-right: 236px;
-  padding-top: 121px;
-  padding-bottom: 137px;
-}
-.about__row {
-  flex-wrap: wrap;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.about__col {
-  flex-grow: 1;
-  flex-shrink: 1;
-}
-.about__col:first-child {
-  margin-right: 60px;
-}
-.about__col:nth-child(2) {
-  margin-right: 60px;
-}
-.about__card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.about__img {
-  display: block;
-  object-fit: cover;
-  width: 287px;
-  height: 287px;
-}
-.about__img-box {
-  position: relative;
-  padding-bottom: 40px;
-}
-.about__body-text {
-  text-align: center;
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 25px;
-  max-width: 262px;
-}
-.about__row {
-  margin-bottom: 60px;
-}
-.about__btn-delivery {
-  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
