--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -17,17 +17,19 @@
         justify-content: space-between;
     }
 
-    &__social {
-        display: flex;
-        margin-right: 99px;
-
-        &-img {
+    &__tel {
             display: flex;
             flex-direction: row;
             margin-right: 22px;
             align-items: center;
             margin-right: 6px;
-        }
+    }
+
+    &__social {
+        display: flex;
+        margin-right: 99px;
+
+       
 
         &-tel-number:hover {
             color:#b82121;
