--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -31,11 +31,12 @@
 
     }
 
-    .header__social {
-        margin-right: 30px;
-        flex-shrink:0;
-
-        &-img {
+    .header {
+        &__social {
+            margin-right: 30px;
+            flex-shrink:0;
+        }
+        &__tel {
             margin-right: 20px;
         }
 
@@ -192,13 +193,9 @@
 @media (max-width:410px) {
 
     .header {
-
+        padding-bottom: 65px;
         &__social {
             margin-left: 0px;
-
-            &-img {
-                margin-right: 15px;
-            }
 
             &-svg {
                 margin-left: 0px;
@@ -208,6 +205,10 @@
                     margin-right: 0px;
                 }
             }
+        }
+
+        &__tel {
+            margin-right: 15px;
         }
 
         &__logo {
@@ -223,15 +224,29 @@
 
     .hero {
 
+        min-height:initial;
+
         &__caption {
             font-size: 32px;
             line-height: 40px;
             font-weight: 900;
+            margin-bottom: 20px;
         }
 
         &__desc {
             line-height: 22px;
             max-width: 355px;
+            margin-bottom: 30px;
+        }
+
+        &__content{
+            flex-grow: 0;
+            padding-bottom: 150px;
+            margin-bottom: 0px;
+        }
+
+        &__wrap {
+            min-height: initial;
         }
 
     }
