--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -253,7 +253,10 @@
 
 
     .about {
-
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 60px;
+        
         &__btn-delivery {
             display: none;
         }
