--- a/styles/styles.css
+++ b/styles/styles.css
@@ -454,6 +454,11 @@ svg {
     min-height: initial;
   }
 
+  .about {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 60px;
+  }
   .about__btn-delivery {
     display: none;
   }
