--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -11,6 +11,9 @@
         padding-left: 50px;
         padding-right: 50px;
     }
+    .footer__text-tel {
+        display: block;
+    }
 }
 
 @media (max-width:1310px){
