--- a/styles/styles.css
+++ b/styles/styles.css
@@ -278,6 +278,10 @@ svg {
     padding-left: 50px;
     padding-right: 50px;
   }
+
+  .footer__text-tel {
+    display: block;
+  }
 }
 @media (max-width: 1310px) {
   .header__line:nth-child(1) {
