--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -3,6 +3,8 @@
     .header__social-tel-number {
         display: none;
     }
+    
+    
    
 }
 @media (max-width:1400px) {
@@ -11,8 +13,23 @@
         padding-left: 50px;
         padding-right: 50px;
     }
+
     .footer__text-tel {
+        width: 100%;
+    }
+
+    .socialitem {
         display: block;
+        width: 100%;
+    }
+
+    img.footer__social-icon:nth-of-type(1){
+        margin-left: 36%;
+        margin-right: 5%;
+    }
+    
+    img.footer__social-icon:nth-of-type(2){
+        margin-right: 5%;
     }
 }
 
@@ -71,6 +88,26 @@
 
 
 @media (max-width:1023px) {
+
+    img.footer__social-icon:nth-of-type(1){
+        margin-left: 0;
+    }
+
+    div.footer__copyright-col {
+        width: 100%;
+        text-align: center;
+    }
+
+    div.footer__main-col {
+        width: 50%;
+        padding-bottom: 20px;
+        text-align: center;
+    }
+
+    div.footer__main-row {
+        justify-content: center;
+        
+    }
 
     .header {
 
@@ -132,7 +169,15 @@
 }
 
 @media (max-width:768px) {
-    
+    p.footer__copyright-col:nth-child(1) > p:first-child {
+        display: block;
+        margin-right: 0px;
+    }
+
+    div.footer__main-col {
+        width: 100%;
+    }
+
     .hero {
         &__content {
             justify-content: center;
@@ -187,6 +232,10 @@
          padding-top: 10px;
      }
 
+     .footer__wrap {
+        margin-left:10px;
+        margin-right: 10px;
+     }
 }
 
 @media (max-width:410px) {
