--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,7 +280,21 @@ svg {
   }
 
   .footer__text-tel {
+    width: 100%;
+  }
+
+  .socialitem {
     display: block;
+    width: 100%;
+  }
+
+  img.footer__social-icon:nth-of-type(1) {
+    margin-left: 36%;
+    margin-right: 5%;
+  }
+
+  img.footer__social-icon:nth-of-type(2) {
+    margin-right: 5%;
   }
 }
 @media (max-width: 1310px) {
@@ -323,6 +337,25 @@ svg {
   }
 }
 @media (max-width: 1023px) {
+  img.footer__social-icon:nth-of-type(1) {
+    margin-left: 0;
+  }
+
+  div.footer__copyright-col {
+    width: 100%;
+    text-align: center;
+  }
+
+  div.footer__main-col {
+    width: 50%;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+
+  div.footer__main-row {
+    justify-content: center;
+  }
+
   .header__social {
     margin-left: auto;
   }
@@ -367,6 +400,15 @@ svg {
   }
 }
 @media (max-width: 768px) {
+  p.footer__copyright-col:nth-child(1) > p:first-child {
+    display: block;
+    margin-right: 0px;
+  }
+
+  div.footer__main-col {
+    width: 100%;
+  }
+
   .hero__content {
     justify-content: center;
     align-items: center;
@@ -408,6 +450,11 @@ svg {
 
   .box-head {
     padding-top: 10px;
+  }
+
+  .footer__wrap {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 @media (max-width: 410px) {
